--- a/app/static/templates/result.html
+++ b/app/static/templates/result.html
@@ -3,15 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    {% if question_plots %}
-    {% for plots in question_plots %}
-        <div class="plot-container">
-            {{ plots | safe }}
+    <div id="carousel-list" style="display: block; align-items: center; justify-content: center;">
+        <div id="plotly_carousel1" class="carousel slide" style="width: fit-content; height: fit-content;">
+            <div class="carousel-inner">
+                {% if answer_by_question %}
+                    {% for plot in answer_by_question %}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            {{ plot | safe }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-    {% endfor %}
-    {% endif %}
+        <div id="plotly_carousel2" class="carousel slide" style="width: fit-content; height: fit-content; margin-top: 50px;">
+            <div class="carousel-inner">
+                {% if answer_by_gender %}
+                    {% for plot in answer_by_gender %}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            {{ plot | safe }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
