--- a/app/static/templates/result.html
+++ b/app/static/templates/result.html
@@ -5,49 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <title>Document</title>
+    <title>Statistics</title>
+    <style>
+        .carousel-list {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .carousel  {
+            width: fit-content;
+            height: fit-content;
+            
+        }
+        .carousel-inner{
+            border: 2px solid rgb(181, 179, 179);
+            border-radius: 20px;
+        }
+        .navbar {
+            border-bottom: 1px solid black;
+        }
+        .scrollspy-div {
+            background-color: rgb(212, 232, 249);
+        }
+        h1 {
+            margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
-    <div id="carousel-list" style="display: block; align-items: center; justify-content: center;">
-        <div id="plotly_carousel1" class="carousel slide" style="width: fit-content; height: fit-content;">
-            <div class="carousel-inner">
-                {% if answer_by_question %}
-                    {% for plot in answer_by_question %}
+    <nav id="navbar-scroll" class="navbar bg-body-tertiary px-3 mb-3 fixed-top">
+        <a class="navbar-brand" href="#">Statistics Page</a>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+            <a class="nav-link" href="#scrollspy-1">First</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#scrollspy-2">Second</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#scrollspy-3">Third</a>
+            </li>
+        </ul>
+    </nav>
+    <
+    <div data-bs-spy="scroll" data-bs-target="#navbar-scroll" data-bs-smooth-scroll="true" class="scrollspy-div p-3 rounded-2" tabindex="0">
+        <div class="carousel-list">
+            <h1 class="text-center" id="scrollspy-1">질문별 답변 비율 그래프</h1>
+            <div id="plotly_carousel1" class="carousel carousel-fade">
+                <div class="carousel-inner">
+                {% for plot in answer_ratio_bar %}
+                    <div class="carousel-item {% if loop.first %}active{% endif %}">
+                        {{ plot | safe }}
+                    </div>
+                {% endfor %}
+                </div>
+                <button class="carousel-control-prev btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="prev">
+                    <span>Previous</span>
+                </button>
+                <button class="carousel-control-next btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="next">
+                    <span>Next</span>
+                </button>
+            </div>
+            <h1 class="text-center" id="scrollspy-2">나이 별 답변비율 원형 그래프</h1>
+            <div id="plotly_carousel2" class="carousel carousel-fade">
+                <div class="carousel-inner">
+                    {% for plot in answer_by_age_pie %}
                         <div class="carousel-item {% if loop.first %}active{% endif %}">
                             {{ plot | safe }}
                         </div>
                     {% endfor %}
-                {% endif %}
+                </div>
+                <button class="carousel-control-prev btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="prev">
+                    <span>Previous</span>
+                </button>
+                <button class="carousel-control-next btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="next">
+                    <span>Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#plotly_carousel1" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <div id="plotly_carousel2" class="carousel slide" style="width: fit-content; height: fit-content; margin-top: 50px;">
-            <div class="carousel-inner">
-                {% if answer_by_gender %}
+            <h1 class="text-center" id="scrollspy-3">성별에 따른 답변비율 막대 그래프</h1>
+            <div id="plotly_carousel3" class="carousel carousel-fade">
+                <div class="carousel-inner">
                     {% for plot in answer_by_gender %}
                         <div class="carousel-item {% if loop.first %}active{% endif %}">
                             {{ plot | safe }}
                         </div>
                     {% endfor %}
-                {% endif %}
+                </div>
+                <button class="carousel-control-prev btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel3" data-bs-slide="prev">
+                    <span>Previous</span>
+                </button>
+                <button class="carousel-control-next btn btn-outline-primary" type="button" data-bs-target="#plotly_carousel3" data-bs-slide="next">
+                    <span>Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#plotly_carousel2" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
